Get Dynamic Pages 1/2 done

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,13 @@
-backend_url = https://sentianalyzer.1y7mr6655g7p.us-south.codeengine.appdomain.cloud #prev URL: https://riskiersamos-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=your code engine deployment url
+# Mongo server commands
+# cd /home/project/xrwvm-fullstack_developer_capstone/server/database
+# docker build . -t nodeapp
+# docker-compose up
+#
+# Note: If the button doesn't work, launch the application on Port 3030 to obtain the URL.
+#
+#
+#
+#
+#
+backend_url = https://riskiersamos-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/ # https://sentianalyzer.1y7mr6655g7p.us-south.codeengine.appdomain.cloud #prev URL: https://riskiersamos-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url = your code engine deployment url
