Get Dynamic Pages 2/3  done

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -5,7 +5,7 @@
 #
 # Note: If the button doesn't work, launch the application on Port 3030 to obtain the URL.
 #
-#
+# python3 manage.py createsuperuser
 #
 #
 #
