--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,11 +1,11 @@
 # Mongo server commands
 
 # cd /home/project/xrwvm-fullstack_developer_capstone/server/database
-# cd /home/project/xrwvm-fullstack_developer_capstone/server/database
+# docker build . -t nodeapp
 # docker-compose up
 #
 # Note: If the button doesn't work, launch the application on Port 3030 to obtain the URL.
-#
+# Create superuser
 # python3 manage.py createsuperuser
 #
 #
